fixing buttons on landing/footer spacing

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -791,11 +791,10 @@ call-to-action .button {
 
 #contact {
    background: #191919;
-   padding-top: 96px;
-   padding-bottom: 102px;
-   color: #636363;
+   padding-top: 20px;
+   padding-bottom: 15px;
+   color: white;
 }
-#contact .section-head { margin-bottom: 42px; }
 
 #contact a, #contact a:visited  { color: #0762f9; }
 #contact a:hover, #contact a:focus { color: #fff; }
@@ -928,7 +927,7 @@ call-to-action .button {
 
 footer {
    padding-top: 48px;
-   margin-bottom: 48px;
+   margin-bottom: 25px;
    color: #303030;
    font-size: 14px;
    text-align: center;
@@ -964,7 +963,6 @@ footer .copyright  li:first-child:before {
 
 /* social links */
 footer .social-links {
-   margin: 18px 0 30px 0;
    padding: 0;
    font-size: 30px;
 
@@ -1018,5 +1016,5 @@ footer .social-links li:first-child { margin-left: 0; }
 .github-btn{
    height: 54px;
    width: 158.16px;
-   background-color: #34495e !important;
+  
 }
